Comprobación de fechas en las pujas